--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
+    android:padding="@dimen/activity_margin"
+    android:scrollbars="none"
     tools:context=".MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/bg"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:paddingBottom="@dimen/activity_margin"
+            android:text="BMI Demo"/>
         <cn.edu.xjtu.bmidemo.BMIView
             android:id="@+id/BMIView1"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginStart="@dimen/activity_margin"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:background="@drawable/bmi_bg"
             app:normalText="normal"
             app:title="test BMI 1"
             app:currentVal="100"
@@ -30,9 +43,10 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginStart="@dimen/activity_margin"
             android:layout_marginTop="8dp"
+            android:background="@drawable/bmi_bg"
             app:currentVal="350"
             app:title="test BMI 2"
             app:rightColor="@color/yellow"
@@ -44,10 +58,10 @@
             android:id="@+id/BMIView3"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginStart="@dimen/activity_margin"
             android:layout_marginTop="8dp"
+            android:background="@drawable/bmi_bg_top"
             app:rightColor="@color/gray"
             app:title="test BMI 3"
             app:currentVal="370"
@@ -55,5 +69,22 @@
             app:normalTextColor="@color/green"
             app:normalText="normal"
             app:normalTextSize="16sp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dash_line_circle_diameter"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginStart="@dimen/activity_margin"
+            android:background="@drawable/dash_line" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginStart="@dimen/activity_margin"
+            android:textSize="16sp"
+            android:text="测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试"
+            android:background="@drawable/bmi_bg_bottom"
+            android:padding="16dp"
+            />
     </LinearLayout>
 </ScrollView>
