--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="green">#1f9c0d</color>
     <color name="gray">#acacac</color>
     <color name="red">#fdff3f42</color>
+    <color name="white">#ffffff</color>
+    <color name="bg">#f9f9f9f9</color>
+    <color name="gray_light">#e2e2e2</color>
 </resources>
